Update resume with recent positions, raindrop, chad-marketing

--- a/src/frontend/routes/CV.css
+++ b/src/frontend/routes/CV.css
@@ -93,6 +93,15 @@
   color: #cc0066;
 }
 
+.company-name a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.company-name a:hover {
+  text-decoration: underline;
+}
+
 .position-title {
   font-style: italic;
   color: #666666;
