add links to raindrop features

--- a/src/frontend/routes/CV.css
+++ b/src/frontend/routes/CV.css
@@ -128,6 +128,25 @@
   transition: color 0.3s ease;
 }
 
+.experience-description a {
+  color: #ff3366;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.experience-description a:hover {
+  color: #cc0066;
+  text-decoration: underline;
+}
+
+.external-link-arrow {
+  display: inline-block;
+  margin-left: 0.2em;
+  font-size: 0.85em;
+  vertical-align: super;
+  color: #ff3366;
+}
+
 .experience-description li:before {
   content: ">";
   position: absolute;
